# Tipset

./: .gitignore  CLAUDE.md  README.md  main.py  notes.db  pyproject.toml  tipset-project-plan.md
.github/workflows/: ci.yml
backend/: alembic.ini  pyproject.toml  test.db
backend/alembic/: env.py
backend/alembic/versions/: 09ce32f74423_link_notes_to_users.py  4f4e9ff2e626_create_notes_table.py  895819075d25_create_users_table.py
backend/app/: database.py  main.py  models.py  schemas.py
backend/tests/: test_main.py
logs/: log-12-june-25.md
