[project]
name = "tipset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.5",
    "fastapi[standard]>=0.136.3",
    "pytest>=9.0.3",
    "sqlalchemy>=2.0.50",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
pythonpath = ["."]


